--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/MyContent/DiscordRPC/InstanceRPC.InstanceRPC_C
 GameDefaultMap=/Game/MyContent/Levels/LevelMenu.LevelMenu
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
