--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Game/MyContent/DiscordRPC/InstanceRPC.InstanceRPC_C
+GameInstanceClass=None
 GameDefaultMap=/Game/MyContent/Levels/LevelMenu.LevelMenu
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
@@ -44,7 +44,7 @@ DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=DE4D61BC45BE3B79A8E79EBCE3698B84
+SecurityToken=4486E129440404E744E865A873887A66
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
