--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=F4D4E05745EC16BBD6382981960A50C6
-ProjectName=First Person BP Game Template
+ProjectID=A24BC1F04FF820447D997EB7DB0AF354
+ProjectName=SongKanBaan
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
